5th commit: About us

--- a/SantosInvestimentos.html
+++ b/SantosInvestimentos.html
@@ -68,12 +68,12 @@
 
         <section id="company">
 
-            <img src="https://github.com/Bymarcosleitejr/SantosInvestimentos/blob/main/imgs/Stock%20Market%203.png?raw=true">
+            <img src="https://raw.githubusercontent.com/Bymarcosleitejr/SantosInvestimentos/bb2aa576a787d4d0b82ab6c46a3dec65dda1098f/imgs/SVG's/Predictive%20Analyst.svg">
 
-            <div id="weare">
-                <h1>Who we are</h1>
-                <p>We are a group of associates active in the financial market. We work with investment funds and stocks, in the short and long term.<br/> 
-                We hire assertive strategies from the best professionals in the area, which puts us in a safe position to act.<br/>
+            <div id="aboutus">
+                <h1>About us</h1>
+                <p>We are a group of associates active in the financial market. We work with investment funds and stocks, in the short and long term.<br/> <br/>
+                We hire assertive strategies from the best professionals in the area, which puts us in a safe position to act.<br/> <br/>
                 We count on lectures and audits from them quarterly in order to reduce risks and maintain our objectives.</p>
             </div>
 
@@ -85,6 +85,8 @@
 
     <div class="flipcard">
 
+            <img src="https://raw.githubusercontent.com/Bymarcosleitejr/SantosInvestimentos/bb2aa576a787d4d0b82ab6c46a3dec65dda1098f/imgs/SVG's/Finantial%20Data.svg">
+            
             <div id="fixedinc">
                 <h1>Fixed income</h1> 
                 <p>In this product model, we work with a fixed return percentage. It is included in all our plans.</p>
