--- a/SantosInvestimentos.html
+++ b/SantosInvestimentos.html
@@ -164,15 +164,15 @@
 
             <div id="footer_social_media">
                 
-                <a href="#" class="footer-link" id="instagram">
+                <a href="http://www.instagram.com/bymarcosleite" target="_blank" class="footer-link" id="instagram">
                     <i class="fa-brands fa-instagram"></i>
                 </a>
             
-                <a href="#" class="footer-link" id="linkedin">
+                <a href="https://www.linkedin.com/in/bymarcosleite/" target="_blank" class="footer-link" id="linkedin">
                     <i class="fa-brands fa-linkedin-in"></i>
                 </a>    
 
-                <a href="#" class="footer-link" id="twitter">
+                <a href="http://www.twitter.com/bymarcosleitejr" target="_blank" class="footer-link" id="twitter">
                     <i class="fa-brands fa-twitter"></i>
                 </a>
 
@@ -187,15 +187,15 @@
             </li>
 
             <li>
-                <a href="#" class="footer-link">Company</a>
+                <a href="#company" class="footer-link">Company</a>
             </li>
 
             <li>
-                <a href="#" class="footer-link">Products</a>
+                <a href="#flipcard-title" class="footer-link">Products</a>
             </li>
 
             <li>
-                <a href="#" class="footer-link">Setups</a>
+                <a href="#setup-title" class="footer-link">Setups</a>
             </li>
 
         </ul>
